--- a/style.css
+++ b/style.css
@@ -29,7 +29,18 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
+  transform:  translateX(-100vw);
 }  
+
+.overlay-slide-right {
+  transition: all 0.4s ease-in-out;
+  transform: translateX(0);
+}
+
+.overlay-slide-left {
+  transition: all 0.8s ease-in-out;
+  transform: translateX(-100vw);
+}
 
 nav,
 nav ul {
@@ -100,101 +111,162 @@ nav li:nth-of-type(4) {
 nav li:nth-of-type(5) {
   background-color: var(--navColor5);
 }
+
+/* SLide in animation with delay for each nav item */
+.slide-in-1 {
+  animation: slide-in 0.4s linear 0.2s both;
+}
+
+.slide-in-2 {
+  animation: slide-in 0.4s linear 0.4s both;
+}
+
+.slide-in-3 {
+  animation: slide-in 0.4s linear 0.6s both;
+}
+
+.slide-in-4 {
+  animation: slide-in 0.4s linear 0.8s both;
+}
+
+.slide-in-5 {
+  animation: slide-in 0.4s linear 1s both;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+.slide-out-1 {
+  animation: slide-out 0.3s linear 0.5s both;
+}
+
+.slide-out-2 {
+  animation: slide-out 0.3s linear 0.4s both;
+}
+
+.slide-out-3 {
+  animation: slide-out 0.3s linear 0.3s both;
+}
+
+.slide-out-4 {
+  animation: slide-out 0.3s linear 0.2s both;
+}
+
+.slide-out-5 {
+  animation: slide-out 0.3s linear 0.1s both;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+/* --- Menu Bars from W3 schools ------------------------------------ */
   
-  /* --- Menu Bars ------------------------------------ */
+.menu-bars {
+  position: fixed;
+  top: 1rem;
+  right: 2rem;
+  z-index: 10;
+  display: inline;
+  cursor: pointer;
+}
+  
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 2px;
+  background-color: #fff;
+  margin: 8px 0;
+  transition: 0.4s;
+}
+  
+ /* Rotate first bar */
+.change .bar1 {
+  transform: rotate(-45deg) translate(-7px, 8px);
+}
+  
+/* Fade out the second bar */
+.change .bar2 {
+  opacity: 0;
+}
+  
+/* Rotate last bar */
+.change .bar3 {
+  transform: rotate(45deg) translate(-6px, -8px);
+}
+  
+/* --- Sections ------------------------------------ */
+  
+section {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: var(--primaryColor);
+}
+  
+section#home {
+  background-image: url("https://images.unsplash.com/photo-1460574283810-2aab119d8511?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2363&q=80");
+  background-size: cover;
+  background-position: center center;
+}
+  
+section#home a {
+  position: absolute;
+  z-index: 2;
+  top: 1.5rem;
+  left: 1.5rem;
+  text-decoration: none;
+  font-size: 0.8rem;
+  padding-bottom: 5px;
+  color: var(--primaryColor);
+  border-bottom: 1px solid var(--primaryColor);
+}
+  
+section#about {
+  background-color: var(--navColor2);
+}
+  
+section#skills {
+  background-color: var(--navColor3);
+}
+  
+section#projects {
+  background-color: var(--navColor4);
+}
+  
+section#contact {
+  background-color: var(--navColor5);
+}
+  
+/* Media Query: Large Smartphone (Vertical) */
+@media (max-width: 600px) {
+  section#home a {
+    top: 1rem;
+    left: 1rem;
+  }
   
   .menu-bars {
-    position: fixed;
-    top: 1rem;
-    right: 2rem;
-    z-index: 10;
-    display: inline;
-    cursor: pointer;
-  }
-  
-  .bar1,
-  .bar2,
-  .bar3 {
-    width: 35px;
-    height: 2px;
-    background-color: #fff;
-    margin: 8px 0;
-    transition: 0.4s;
-  }
-  
-  /* Rotate first bar */
-  .change .bar1 {
-    transform: rotate(-45deg) translate(-7px, 8px);
-  }
-  
-  /* Fade out the second bar */
-  .change .bar2 {
-    opacity: 0;
-  }
-  
-  /* Rotate last bar */
-  .change .bar3 {
-    transform: rotate(45deg) translate(-6px, -8px);
-  }
-  
-  /* --- Sections ------------------------------------ */
-  
-  section {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: var(--primaryColor);
-  }
-  
-  section#home {
-    background-image: url("https://images.unsplash.com/photo-1460574283810-2aab119d8511?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2363&q=80");
-    background-size: cover;
-    background-position: center center;
-  }
-  
-  section#home a {
-    position: absolute;
-    z-index: 2;
-    top: 1.5rem;
-    left: 1.5rem;
-    text-decoration: none;
-    font-size: 0.8rem;
-    padding-bottom: 5px;
-    color: var(--primaryColor);
-    border-bottom: 1px solid var(--primaryColor);
-  }
-  
-  section#about {
-    background-color: var(--navColor2);
-  }
-  
-  section#skills {
-    background-color: var(--navColor3);
-  }
-  
-  section#projects {
-    background-color: var(--navColor4);
-  }
-  
-  section#contact {
-    background-color: var(--navColor5);
-  }
-  
-  /* Media Query: Large Smartphone (Vertical) */
-  @media (max-width: 600px) {
-    section#home a {
-      top: 1rem;
-      left: 1rem;
-    }
-  
-    .menu-bars {
-      top: 0.5rem;
-      right: 1rem;
-    }
-  }
+    top: 0.5rem;
+    right: 1rem;
+ }
+}
   
